// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Banner > renders correctly with a button 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1.5rem;
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 1rem;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.emotion-0>svg:first-child,
.emotion-0>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-0 button[name="close"] {
  background: none;
}

.emotion-0 button[name="close"]:hover {
  background: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #641cb3;
  font-size: 1.3125rem;
  font-family: Space Grotesk,Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 2rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2.5rem;
  padding: 0 0.75rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.emotion-14:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-14:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-14:hover,
.emotion-14:active {
  background: #792dd4;
  color: #f9f9fa;
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-16:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-16:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-16:hover,
.emotion-16:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-18 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-18 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-18 path {
  fill: currentColor;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <img
          alt=""
          src="/src/components/Banner/assets/default-image.svg"
        />
      </div>
      <div
        class="emotion-4 emotion-5"
        style="flex: 1;"
      >
        <div
          class="emotion-6 emotion-5"
          style="flex: 1;"
        >
          <p
            class="emotion-8 emotion-9"
          >
            Title
          </p>
          <p
            class="emotion-10 emotion-9"
          >
            Description
          </p>
        </div>
        <div
          class="emotion-12 emotion-5"
        >
          <button
            class="emotion-14 emotion-15"
            type="button"
          >
            Button
          </button>
        </div>
      </div>
      <button
        class="emotion-16 emotion-17"
        name="close"
        type="button"
      >
        <svg
          class="emotion-18 emotion-19"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner > renders correctly with a link 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1.5rem;
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 1rem;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.emotion-0>svg:first-child,
.emotion-0>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-0 button[name="close"] {
  background: none;
}

.emotion-0 button[name="close"]:hover {
  background: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #641cb3;
  font-size: 1.3125rem;
  font-family: Space Grotesk,Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 2rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-14 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-14 .e1afnb7a2,
.emotion-14 .e1afnb7a3,
.emotion-14 .emotion-18 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-14>* {
  pointer-events: none;
}

.emotion-14:hover,
.emotion-14:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.emotion-14:hover .e1afnb7a2,
.emotion-14:focus .e1afnb7a2,
.emotion-14:hover .e1afnb7a3,
.emotion-14:focus .e1afnb7a3,
.emotion-14:hover .emotion-18,
.emotion-14:focus .emotion-18 {
  -webkit-transform: translate(-0.25rem, 0);
  -moz-transform: translate(-0.25rem, 0);
  -ms-transform: translate(-0.25rem, 0);
  transform: translate(-0.25rem, 0);
}

.emotion-14[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-14:hover::after,
.emotion-14:focus::after {
  background-color: #641cb3;
}

.emotion-14:active {
  text-decoration-thickness: 2px;
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 0.25rem;
}

.emotion-19 {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
  margin-left: 0.5rem;
}

.emotion-19 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-21:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-21:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-21:hover,
.emotion-21:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-23 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-23 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-23 path {
  fill: currentColor;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <img
          alt=""
          src="/src/components/Banner/assets/default-image.svg"
        />
      </div>
      <div
        class="emotion-4 emotion-5"
        style="flex: 1;"
      >
        <div
          class="emotion-6 emotion-5"
          style="flex: 1;"
        >
          <p
            class="emotion-8 emotion-9"
          >
            Title
          </p>
          <p
            class="emotion-10 emotion-9"
          >
            Description
          </p>
        </div>
        <div
          class="emotion-12 emotion-5"
        >
          <a
            class="emotion-14 emotion-15"
            data-variant="standalone"
            href=""
            rel="noopener noreferrer"
            target="_blank"
            variant="bodySmallStrong"
          >
            Link
            <span
              class="emotion-16 emotion-17"
            >
              <svg
                class="emotion-18 emotion-19 emotion-20"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.25 6.5a.75.75 0 0 0-.75.75v8.5c0 .414.336.75.75.75h8.5a.75.75 0 0 0 .75-.75v-4a.75.75 0 0 1 1.5 0v4A2.25 2.25 0 0 1 12.75 18h-8.5A2.25 2.25 0 0 1 2 15.75v-8.5A2.25 2.25 0 0 1 4.25 5h5a.75.75 0 0 1 0 1.5z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M6.194 13.753a.75.75 0 0 0 1.06.053L16.5 5.44v2.81a.75.75 0 0 0 1.5 0v-4.5a.75.75 0 0 0-.75-.75h-4.5a.75.75 0 0 0 0 1.5h2.553l-9.056 8.194a.75.75 0 0 0-.053 1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <button
        class="emotion-21 emotion-22"
        name="close"
        type="button"
      >
        <svg
          class="emotion-23 emotion-24"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner > renders correctly with closable to false 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1.5rem;
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 1rem;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.emotion-0>svg:first-child,
.emotion-0>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-0 button[name="close"] {
  background: none;
}

.emotion-0 button[name="close"]:hover {
  background: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #641cb3;
  font-size: 1.3125rem;
  font-family: Space Grotesk,Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 2rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <img
          alt=""
          src="/src/components/Banner/assets/default-image.svg"
        />
      </div>
      <div
        class="emotion-4 emotion-5"
        style="flex: 1;"
      >
        <div
          class="emotion-6 emotion-5"
          style="flex: 1;"
        >
          <p
            class="emotion-8 emotion-9"
          >
            Title
          </p>
          <p
            class="emotion-10 emotion-9"
          >
            Description
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner > renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1.5rem;
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 1rem;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.emotion-0>svg:first-child,
.emotion-0>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-0 button[name="close"] {
  background: none;
}

.emotion-0 button[name="close"]:hover {
  background: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #641cb3;
  font-size: 1.3125rem;
  font-family: Space Grotesk,Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 2rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-12:hover,
.emotion-12:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-14 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-14 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-14 path {
  fill: currentColor;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <img
          alt=""
          src="/src/components/Banner/assets/default-image.svg"
        />
      </div>
      <div
        class="emotion-4 emotion-5"
        style="flex: 1;"
      >
        <div
          class="emotion-6 emotion-5"
          style="flex: 1;"
        >
          <p
            class="emotion-8 emotion-9"
          >
            Title
          </p>
          <p
            class="emotion-10 emotion-9"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="emotion-12 emotion-13"
        name="close"
        type="button"
      >
        <svg
          class="emotion-14 emotion-15"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner > renders correctly with direction row 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1.5rem;
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 1rem;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.emotion-0>svg:first-child,
.emotion-0>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-0 button[name="close"] {
  background: none;
}

.emotion-0 button[name="close"]:hover {
  background: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #641cb3;
  font-size: 1.3125rem;
  font-family: Space Grotesk,Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 2rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-12:hover,
.emotion-12:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-14 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-14 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-14 path {
  fill: currentColor;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <img
          alt=""
          src="/src/components/Banner/assets/default-image.svg"
        />
      </div>
      <div
        class="emotion-4 emotion-5"
        style="flex: 1;"
      >
        <div
          class="emotion-6 emotion-5"
          style="flex: 1;"
        >
          <p
            class="emotion-8 emotion-9"
          >
            Title
          </p>
          <p
            class="emotion-10 emotion-9"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="emotion-12 emotion-13"
        name="close"
        type="button"
      >
        <svg
          class="emotion-14 emotion-15"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner > sizes and variants > renders correctly with size medium and variant intro 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1.5rem;
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 1rem;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.emotion-0>svg:first-child,
.emotion-0>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-0 button[name="close"] {
  background: none;
}

.emotion-0 button[name="close"]:hover {
  background: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #641cb3;
  font-size: 1.3125rem;
  font-family: Space Grotesk,Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 2rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-12:hover,
.emotion-12:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-14 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-14 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-14 path {
  fill: currentColor;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <img
          alt=""
          src="/src/components/Banner/assets/default-image.svg"
        />
      </div>
      <div
        class="emotion-4 emotion-5"
        style="flex: 1;"
      >
        <div
          class="emotion-6 emotion-5"
          style="flex: 1;"
        >
          <p
            class="emotion-8 emotion-9"
          >
            Title
          </p>
          <p
            class="emotion-10 emotion-9"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="emotion-12 emotion-13"
        name="close"
        type="button"
      >
        <svg
          class="emotion-14 emotion-15"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner > sizes and variants > renders correctly with size medium and variant promotional 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1.5rem;
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 1rem;
  background-image: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.emotion-0>svg:first-child,
.emotion-0>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-0 button[name="close"] {
  background: none;
}

.emotion-0 button[name="close"]:hover {
  background: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #ffffff;
  font-size: 1.3125rem;
  font-family: Space Grotesk,Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 2rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  color: #ffffff;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-12:hover,
.emotion-12:active {
  background: #792dd4;
  color: #f9f9fa;
}

.emotion-14 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-14 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-14 path {
  fill: currentColor;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <img
          alt=""
          src="/src/components/Banner/assets/default-image.svg"
        />
      </div>
      <div
        class="emotion-4 emotion-5"
        style="flex: 1;"
      >
        <div
          class="emotion-6 emotion-5"
          style="flex: 1;"
        >
          <p
            class="emotion-8 emotion-9"
          >
            Title
          </p>
          <p
            class="emotion-10 emotion-9"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="emotion-12 emotion-13"
        name="close"
        type="button"
      >
        <svg
          class="emotion-14 emotion-15"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner > sizes and variants > renders correctly with size small and variant intro 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1rem;
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 1rem;
  background: #f1eefc;
  -webkit-background-position: left,right;
  background-position: left,right;
  background-repeat: no-repeat,no-repeat;
  -webkit-background-size: contain,contain;
  background-size: contain,contain;
}

.emotion-0>svg:first-child,
.emotion-0>img {
  height: 100px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-0 button[name="close"] {
  background: none;
}

.emotion-0 button[name="close"]:hover {
  background: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 74px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #641cb3;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-12:hover,
.emotion-12:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-14 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-14 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-14 path {
  fill: currentColor;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <img
          alt=""
          src="/src/components/Banner/assets/default-image-small.svg"
        />
      </div>
      <div
        class="emotion-4 emotion-5"
        style="flex: 1;"
      >
        <div
          class="emotion-6 emotion-5"
          style="flex: 1;"
        >
          <p
            class="emotion-8 emotion-9"
          >
            Title
          </p>
          <p
            class="emotion-10 emotion-9"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="emotion-12 emotion-13"
        name="close"
        type="button"
      >
        <svg
          class="emotion-14 emotion-15"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner > sizes and variants > renders correctly with size small and variant promotional 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1rem;
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 1rem;
  -webkit-background-position: left,right;
  background-position: left,right;
  background-image: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
  background-repeat: no-repeat,no-repeat;
  -webkit-background-size: contain,contain;
  background-size: contain,contain;
}

.emotion-0>svg:first-child,
.emotion-0>img {
  height: 100px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-0 button[name="close"] {
  background: none;
}

.emotion-0 button[name="close"]:hover {
  background: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 74px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #ffffff;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  color: #ffffff;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-12:hover,
.emotion-12:active {
  background: #792dd4;
  color: #f9f9fa;
}

.emotion-14 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-14 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-14 path {
  fill: currentColor;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <img
          alt=""
          src="/src/components/Banner/assets/default-image-small.svg"
        />
      </div>
      <div
        class="emotion-4 emotion-5"
        style="flex: 1;"
      >
        <div
          class="emotion-6 emotion-5"
          style="flex: 1;"
        >
          <p
            class="emotion-8 emotion-9"
          >
            Title
          </p>
          <p
            class="emotion-10 emotion-9"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="emotion-12 emotion-13"
        name="close"
        type="button"
      >
        <svg
          class="emotion-14 emotion-15"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
